stage0/tests/sema/veo/74_error_trait_method_body.veo
trait Printable {
    // expected-error@+1: trait methods cannot have a body
    func print() {}
}
